update html file links

--- a/experiments/html/advice.html
+++ b/experiments/html/advice.html
@@ -3,8 +3,7 @@
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <title>Advice</title>
   <meta name="viewport" content="initial-scale=1.0">
-  <link rel="stylesheet" href="style.css" />
-  <link rel="stylesheet" href="jquery-ui.css"/>
+  <link rel="stylesheet" href="../css/style.css" />
 </head> 
 <body>
 
@@ -17,7 +16,7 @@
 </div>
 
 <div class="slide" id="consent">
-  <img src="stanford.png" alt="Stanford University">
+  <img src="../img/stanford.png" alt="Stanford University">
   <br>
   <br>
   <!-- <p id='logo-text'>Stanford Language and Cognition Lab</p> -->
@@ -134,10 +133,9 @@
 <br/>
 
 <!-- Scripts -->
-<script src="jquery.min.js"></script>
-<script src="mmturkey.js"></script>
-<script src="browserCheck.js"></script>
-<script src="advice.js"></script>
-<script type="text/javascript" src="nlp-api-0.1-edits.js"></script>
+<script src="../js/external/jquery.min.js"></script>
+<script src="../js/external/mmturkey.js"></script>
+<script src="../js/external/browserCheck.js"></script>
+<script src="../js/advice.js"></script>
 </body>
 </html>
