--- a/experiments/html/whybot-2014-04-01.html
+++ b/experiments/html/whybot-2014-04-01.html
@@ -3,7 +3,7 @@
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <title>Explanations</title>
   <meta name="viewport" content="initial-scale=1.0">
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="../css/style.css" />
 </head> 
 <body>
 
@@ -16,7 +16,7 @@
 </div>
 
 <div class="slide" id="consent">
-  <img src="stanford.png" alt="Stanford University">
+  <img src="../img/stanford.png" alt="Stanford University">
   <br>
   <br>
   <p class="block-text">In this experiment, you will give some explanations for some events.</p>
@@ -83,11 +83,9 @@
 <br/>
 
 <!-- Scripts -->
-<!-- <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script> -->
-<script src="jquery.min.js"></script>
-<script src="mmturkey.js"></script>
-<script src="browserCheck.js"></script>
-<script src="whybot.js"></script>
-<script type="text/javascript" src="nlp-api-0.1.js"></script>
+<script src="../js/external/jquery.min.js"></script>
+<script src="../js/external/mmturkey.js"></script>
+<script src="../js/external/browserCheck.js"></script>
+<script src="../js/whybot-2014-04-01.js"></script>
 </body>
 </html>
