--- a/experiments/html/explanations.html
+++ b/experiments/html/explanations.html
@@ -3,8 +3,7 @@
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <title>Explanations</title>
   <meta name="viewport" content="initial-scale=1.0">
-  <link rel="stylesheet" href="style.css" />
-  <link rel="stylesheet" href="jquery-ui.css"/>
+  <link rel="stylesheet" href="../css/style.css" />
 </head> 
 <body>
 
@@ -17,7 +16,7 @@
 </div>
 
 <div class="slide" id="consent">
-  <img src="stanford.png" alt="Stanford University">
+  <img src="../img/stanford.png" alt="Stanford University">
   <br>
   <br>
   <!-- <p id='logo-text'>Stanford Language and Cognition Lab</p> -->
@@ -135,10 +134,9 @@
 <br/>
 
 <!-- Scripts -->
-<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
-<script src="mmturkey.js"></script>
-<script src="browserCheck.js"></script>
-<script src="explanations.js"></script>
-<script type="text/javascript" src="nlp-api-0.1.js"></script>
+<script src="../js/external/jquery.min.js"></script>
+<script src="../js/external/mmturkey.js"></script>
+<script src="../js/external/browserCheck.js"></script>
+<script src="../js/explanations.js"></script>
 </body>
 </html>
