rearrange and fix html links

--- a/experiments/goalbot/goalbot.html
+++ b/experiments/goalbot/goalbot.html
@@ -3,7 +3,7 @@
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <title>Goals</title>
   <meta name="viewport" content="initial-scale=1.0">
-  <link rel="stylesheet" href="../css/style.css" />
+  <link rel="stylesheet" href="../_shared/css/style.css" />
 </head> 
 <body>
 
@@ -16,7 +16,7 @@
 </div>
 
 <div class="slide" id="consent">
-  <img src="../img/stanford.png" alt="Stanford University">
+  <img src="../_shared/img/stanford.png" alt="Stanford University">
   <br>
   <br>
   <!-- <p id='logo-text'>Stanford Language and Cognition Lab</p> -->
@@ -140,9 +140,9 @@
 <br/>
 
 <!-- Scripts -->
-<script src="../js/external/jquery.min.js"></script>
-<script src="../js/external/mmturkey.js"></script>
-<script src="../js/external/browserCheck.js"></script>
-<script src="../js/goals.js"></script>
+<script src="../_shared/js/jquery.min.js"></script>
+<script src="../_shared/js/mmturkey.js"></script>
+<script src="../_shared/js/browserCheck.js"></script>
+<script src="goalbot.js"></script>
 </body>
 </html>
